--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,17 @@ android {
 }
 
 dependencies {
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2' // Libreria para graficar
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.3.1'
-    compile files('libs/droidText.0.4.jar')
+    // Libreria para generarar chivos PDF
+    compile files('libs/droidText.0.4.jar') // Libreria para generararchivos PDF
+    // Libreria para visualizar PDF
+    compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
+    compile 'org.apache.commons:commons-io:1.3.2'
     testCompile 'junit:junit:4.12'
 }
