--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_icon"
@@ -19,7 +22,8 @@
         <activity
             android:name=".controlador.SeleccionaTipoPracticaProcesosLacteosActivity"
             android:theme="@style/Selects" />
-        <activity android:name=".controlador.LoginActivity">
+        <activity android:name=".controlador.LoginActivity"
+            android:theme="@style/Selects">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,6 +38,7 @@
         <activity android:name=".controlador.TransferenciaTanqueActivity"
             android:label="Tanque Agitado"
             android:theme="@style/Selects" />
+        <activity android:name=".controlador.VisualizacionGuia"/>
     </application>
 
 </manifest>
