--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name=".controlador.SeleccionaTipoPracticaProcesosLacteosActivity"
             android:theme="@style/Selects" />
         <activity android:name=".controlador.LoginActivity"
-            android:theme="@style/Selects">
+            android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +38,9 @@
         <activity android:name=".controlador.TransferenciaTanqueActivity"
             android:label="Tanque Agitado"
             android:theme="@style/Selects" />
-        <activity android:name=".controlador.VisualizacionGuia"/>
+        <activity android:name=".controlador.VisualizacionGuia"
+            android:label="Guía de Laboratorio"
+            android:theme="@style/Selects"/>
     </application>
 
 </manifest>
