--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -14,7 +15,7 @@
         android:icon="@mipmap/ic_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <activity
             android:name=".controlador.SeleccionarLaboratorioActivity"
             android:theme="@style/Selects" />
@@ -30,15 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".controlador.TransferenciaPlacasActivity"
-            android:label="Pasteurizador"
-            android:theme="@style/Selects" />
         <activity android:name=".controlador.PruebasDeDatos" />
-        <activity
-            android:name=".controlador.TransferenciaTanqueActivity"
-            android:label="Tanque Agitado"
-            android:theme="@style/Selects" />
         <activity android:name=".modelo.serviciosPractica.Guia" />
         <activity
             android:name=".controlador.VistaPlacasPrincipal"
