--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,7 @@
             android:label="Tanque Agitado"
             android:theme="@style/Selects" />
         <activity android:name=".controlador.ProfesorAsignaturaActivity" />
-        <activity
-            android:name=".controlador.GraficaPlacasActivity"
-            android:theme="@style/Selects" />
+        <activity android:name=".controlador.GraficaPlacasActivity"/>
 
         <activity android:name=".controlador.TablaResultados"
             android:theme="@style/Selects"/>
