--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:theme="@style/Selects" />
         <activity
             android:name=".controlador.LoginActivity"
-            android:theme="@style/Selects">
+            android:theme="@style/Selects"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
